Added new feature and fixed bugs